# LightningDS

./: README.md  pyproject.toml  requirements.txt  setup.py
jupyter-lightning-snippets/: Chapter1_HowManyNodesnChannels.ipynb  Chapter2_BasicStats.ipynb  Chapter3_NetworkGraph.ipynb  Chapter4_graphmetrics.ipynb  Chapter5_Pathfinding.ipynb  Chapter6_Probing.ipynb  Chapter7_LND_APIcalls.ipynb  Chapter8_MoreVisualization.ipynb  Chapter9_HTLCAnalysis.ipynb  HowManyNodesnChannels.ipynb
lightningDS/: analysis.py  ingestion.py  statistics.py  transformation.py  visualization.py
tests/: test_ingestion.py
